# cloudguard

./: .gitignore  README.md  build.sh  cloudguardian.py  dns.py  export_iam.sh  firewall.py  gcs.py  iam.py  iam_monitoring.py  install.sh  pyproject.toml  reinstall.sh  requirements.txt  run.sh
cloudguard/: main.py
cloudguard/providers/: list.py
cloudguard/providers/gcp/interfaces/compute/: gcs.py
cloudguard/providers/gcp/interfaces/network/: dns.py
cloudguard/providers/gcp/modules/compute/: gcs.py
cloudguard/utils/: file.py  shell.py
exports/: tmp
modules/provider/gcp/: iam.py
modules/provider/gcp/compute/: gcs.py
modules/provider/gcp/network/: dns.py  firewall.py
scripts/: export_iam_binding.sh  install_gcloud.sh
